Ensure images & post blocks are square on small screens

--- a/source/wp-content/themes/wporg-news-2021/sass/page/_categories.scss
+++ b/source/wp-content/themes/wporg-news-2021/sass/page/_categories.scss
@@ -190,10 +190,7 @@ body.category-community {
 
 	li.post {
 		margin: 0;
-
-		@include break-small() {
-			aspect-ratio: 1 / 1;
-		}
+		aspect-ratio: 1 / 1;
 
 		.entry-meta {
 			padding: 24px;
@@ -212,12 +209,14 @@ body.category-community {
 					height: 100%;
 				}
 			}
+
 			// B&W featured image
 			.wp-block-post-featured-image {
 				object-fit: cover;
 
 				img {
 					filter: grayscale(100%);
+					aspect-ratio: 1 / 1;
 				}
 			}
 
